dsp-cli/tests/snapshots/resource_describe_values_snapshots__values_csv_columns_comment.snap
---
source: tests/resource_describe_values_snapshots.rs
expression: out
---
field,value,comment
hasTranscription,some transcription,reading uncertain
