dsp-cli/tests/snapshots/resource_describe_values_snapshots__values_json_links_list_file.snap
---
source: tests/resource_describe_values_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0,"note":"results may be filtered; login to see private resources"},"data":{"label":"n6r","iri":"http://rdfh.ch/0803/--6Esp4SVnGG1DBzFvYErw","resource_type":"Page","ark_url":"https://ark.stage.dasch.swiss/ark:/72163/1/0803/==6Esp4SVnGG1DBzFvYErwr","creation_date":"2011-04-14T07:32:49Z","last_modified":"2024-03-10T15:00:00Z","attached_project":"http://rdfh.ch/projects/3ABR_2i8QYGSIDvmP9mlEw","owner":"http://rdfh.ch/users/IShOmBIGSnO1TXd4-Ty4Sw","visibility":"public","your_access":"view","values":[{"field":"isPartOfBook","field_label":"Is Part Of Book","values":[{"value_type":"link","target_iri":"http://rdfh.ch/0803/bookres123","target_label":"Incunabula Testbook"}]},{"field":"hasRelatedResource","field_label":"Related Resource","values":[{"value_type":"link","target_iri":"http://rdfh.ch/0803/anotherres456","target_label":null}]},{"field":"hasBookGenre","field_label":"Book Genre","values":[{"value_type":"vocabulary-item","node_iri":"http://rdfh.ch/lists/0803/genre-incunabula","label":"Incunabula"}]},{"field":"hasSubject","field_label":"Subject","values":[{"value_type":"vocabulary-item","node_iri":"http://rdfh.ch/lists/0803/subject-history","label":null}]},{"field":"hasStillImageFileValue","field_label":null,"values":[{"value_type":"still-image","filename":"n6r.jp2","url":"https://iiif.dasch.swiss/0803/n6r.jp2/full/max/0/default.jpg","width":2048,"height":3072}]},{"field":"hasDocumentFileValue","field_label":null,"values":[{"value_type":"document","filename":"transcription.pdf","url":"https://files.dasch.swiss/0803/transcription.pdf","width":null,"height":null}]}]}}
