dsp-cli/tests/snapshots/resource_describe_values_snapshots__values_json_named_scalars_and_raw.snap
---
source: tests/resource_describe_values_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0,"note":"results may be filtered; login to see private resources"},"data":{"label":"n6r","iri":"http://rdfh.ch/0803/--6Esp4SVnGG1DBzFvYErw","resource_type":"Page","ark_url":"https://ark.stage.dasch.swiss/ark:/72163/1/0803/==6Esp4SVnGG1DBzFvYErwr","creation_date":"2011-04-14T07:32:49Z","last_modified":"2024-03-10T15:00:00Z","attached_project":"http://rdfh.ch/projects/3ABR_2i8QYGSIDvmP9mlEw","owner":"http://rdfh.ch/users/IShOmBIGSnO1TXd4-Ty4Sw","visibility":"public","your_access":"view","values":[{"field":"hasCopyingDate","field_label":"Copying Date","values":[{"value_type":"date","calendar":"GREGORIAN","start":{"year":1489,"month":null,"day":null,"era":"CE"},"end":{"year":1490,"month":null,"day":null,"era":"CE"}}]},{"field":"hasTimestamp","field_label":"Timestamp","values":[{"value_type":"time","value":"2024-03-10T15:00:00Z"}]},{"field":"hasExternalUri","field_label":"External URI","values":[{"value_type":"uri","value":"https://www.example.com/resource"}]},{"field":"hasColor","field_label":"Color","values":[{"value_type":"color","value":"#ff3300"}]},{"field":"hasLocation","field_label":"Location","values":[{"value_type":"geoname","value":"2661552"}]},{"field":"hasDuration","field_label":"Duration","values":[{"value_type":"interval","text":"PT10S"}]},{"field":"hasStillImageFileValue","field_label":null,"values":[{"value_type":"text","text":"sentinel"}]}]}}
