dsp-cli/tests/snapshots/resource_describe_values_snapshots__values_json_scalars.snap
---
source: tests/resource_describe_values_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0,"note":"results may be filtered; login to see private resources"},"data":{"label":"n6r","iri":"http://rdfh.ch/0803/--6Esp4SVnGG1DBzFvYErw","resource_type":"Page","ark_url":"https://ark.stage.dasch.swiss/ark:/72163/1/0803/==6Esp4SVnGG1DBzFvYErwr","creation_date":"2011-04-14T07:32:49Z","last_modified":"2024-03-10T15:00:00Z","attached_project":"http://rdfh.ch/projects/3ABR_2i8QYGSIDvmP9mlEw","owner":"http://rdfh.ch/users/IShOmBIGSnO1TXd4-Ty4Sw","visibility":"public","your_access":"view","values":[{"field":"hasPagenum","field_label":"Page Number","values":[{"value_type":"text","text":"n6r"}]},{"field":"hasComment","field_label":"Comment","values":[{"value_type":"text","text":"This is a text value with stripped standoff."}]},{"field":"hasSequenceNumber","field_label":"Sequence Number","values":[{"value_type":"integer","value":42}]},{"field":"hasMeasurement","field_label":"Measurement","values":[{"value_type":"decimal","value":"3.14159"}]},{"field":"isPublished","field_label":"Is Published","values":[{"value_type":"boolean","value":true}]},{"field":"hasPublicationDate","field_label":"Publication Date","values":[{"value_type":"date","calendar":"GREGORIAN","start":{"year":1489,"month":null,"day":null,"era":"CE"},"end":{"year":1489,"month":null,"day":null,"era":"CE"}}]},{"field":"hasKeyword","field_label":"Keyword","values":[{"value_type":"text","text":"incunabula"},{"value_type":"text","text":"manuscript"}]}]}}
